<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MasjidHub</string>
    <string name="masuk">Masuk</string>
    <string name="nama">Nama</string>
    <string name="password">Password</string>
    <string name="kebijakan">Dengan mendaftar, Kamu menyetujui Syarat
        &amp; Ketentuan dan Kebijakan Privasi kami</string>
    <string name="login">Masuk</string>
    <string name="dkm">DKM</string>
    <string name="register">Daftar</string>
    <string name="belum">Lupa Kata sandi? Klik disini</string>
    <string name="password_toggle_description">pass</string>
    <string name="datang">Selamat Datang di MasjidHub</string>
    <string name="slogan">Kesejahteraan Bersama, Membangun Bersama</string>
    <string name="email">Email</string>
    <string name="sudah">Sudah punya akun? Login</string>
    <string name="home">Beranda</string>
    <string name="carimasjid">Cari Masjid</string>
    <string name="keuangan">Keuangan</string>
    <string name="profil">Profil</string>
    <string name="verify">Verifikasi Sudah terkirim</string>
    <string name="total_keuangan">Rp.xxx.xxx.xxx</string>
    <string name="reg_dkm">Daftar Sebagai DKM</string>
    <string name="regist">Daftar Sebagai DKM</string>
    <string name="subhead">Kami akan mengarahkan ke kontak admin untuk proses lebih lanjut</string>
    <string name="hubungi_admin">Hubungi Admin</string>
    <string name="jamaah">Jamaah Masjid</string>
    <string name="program">Program</string>
    <string name="masjid_terdekat">Masjid Terdekat</string>
    <string name="infaq">Infaq</string>
    <string name="event">Event</string>
    <string name="cari_masjid">Cari Masjid</string>
    <string name="logout">Keluar</string>
    <string name="simpan">Simpan</string>
    <string name="upload">Unggah</string>
    <string name="alamat">Alamat</string>
    <string name="perbarui_Keuangan">Perbarui Keuangan</string>
    <string name="post_image">Post Image</string>
    <string name="emaildkm">Email: %1$s</string>
    <string name="tanggal_bayar">Tanggal Bayar: %1$s</string>
    <string name="metode_pembayaran">Metode Pembayaran: %1$s</string>
    <string name="nama_label">Nama: %1$s</string>
    <string name="email_label">Email: %1$s</string>
    <string name="jumlah_label">Jumlah: Rp %1$.2f</string>
    <string name="alasan_label">Alasan: %1$s</string>
    <string name="tanggal_label">Tanggal: %1$s</string>
    <string name="kontak_label">Kontak: %1$s</string>
    <string name="lokasi_label">Lokasi: %1$s</string>
    <string name="status_label">Status: %1$s</string>
    <string name="namabank_label">Nama Bank: %s</string>
    <string name="namarekekning_label">Nama Rekening: %s</string>
    <string name="norek_label">Nomor Rekening: %s</string>
    <string name="jumlah">Jumlah:</string>
    <string name="user_email">User Email:</string>
    <string name="ajuan">Ajuan</string>
    <string name="masjid">Masjid</string>
    <string name="agenda">Agenda</string>
    <string name="verif">Verif</string>
    <string name="kas">Kas</string>
    <string name="kegiatan">Kegiatan</string>
    <string name="jamaah_terdaftar">Jamaah Terdaftar</string>
    <string name="permohonan_dana">Permohonan Dana</string>
    <string name="ulang">Ulang</string>
    <string name="laporan_infaq">Laporan Infaq</string>
    <string name="laporan_kas">Laporan Kas</string>
    <string name="laporan_ajuan_dana">Laporan Ajuan \n Dana</string>
    <string name="masjid_terdaftar">Masjid Terdaftar</string>
    <string name="permohonan">Permohonan</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="menu">Menu</string>
    <string name="ajukan_dana">Ajukan Dana</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="jumlah_infaq">Jumlah Infaq</string>
    <string name="tanggal_pengajuan">Tanggal Pengajuan</string>
    <string name="bank_transfer">Transfer Bank</string>
    <string name="bukti_pembayaran">Bukti Pembayaran</string>
    <string name="bayar">Bayar</string>
    <string name="laporan_pengajuan">Laporan Pengajuan</string>
    <string name="kembali">KEMBALI</string>
    <string name="yang_terkumpul">Yang terkumpul</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="tanggal_dipilih">Tanggal Dipilih: </string>
    <string name="total_infaq">Total Infaq: 0</string>
    <string name="total_kas">Total Kas: 0</string>
    <string name="total_pengajuan">Total Pengajuan: 0</string>
    <string name="permohonan_diproses">Permohonan Sedang Diproses </string>
    <string name="data_sedang_proses">Data Anda sedang diproses oleh Admin untuk verifikasi.</string>
    <string name="kembali_awal">Kembali ke Halaman Awal</string>
    <string name="jumlah_pengajuan">Jumlah Pengajuan (Rp)</string>
    <string name="alasan_pengajuan">Alasan Pengajuan</string>
    <string name="nomor_kontak">Nomor Kontak</string>
    <string name="lokasi">Lokasi</string>
    <string name="unggahfoto_pendukung">Unggah Foto Bukti Pendukung</string>
    <string name="pilihfoto_pendukung">Pilih Foto Bukti Pendukung</string>
    <string name="unggah_ktp">Unggah Foto KTP</string>
    <string name="pilih_ktp">Pilih Foto KTP</string>
    <string name="kas_mingguan">Kas Mingguan</string>
    <string name="txtjumlah">Jumlah Kas Yang Harus diBayar Sebesar 50.000</string>
    <string name="foto_profil">Foto Profil</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="txtjamaah">Jamaah</string>
    <string name="nama_dkm">Nama Dkm</string>
    <string name="daftar_dkm">Daftar Dkm</string>
    <string name="nama_masjid">Nama Masjid</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="nama_pengurus">Nama Ketua/Pengurus</string>
    <string name="nomor_pengurus">Nomor Telepon Ketua/Pengurus</string>
    <string name="email_daftarkan">Email untuk didaftarkan</string>
    <string name="password_daftarkan">Password untuk didaftarkan</string>
    <string name="unggah_ktpdkm">Unggah KTP Ketua Dkm</string>
    <string name="masukkan_namabaru">Masukkan Nama Baru</string>
    <string name="masukkan_alamatbaru">Masukkan Alamat Baru</string>
    <string name="unggah_kegiatan">Unggah Kegiatan</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="masukkan_deskripsi">Masukkan Deskripsi</string>
    <string name="masukkan_gambar">Masukkan Gambar</string>
    <string name="pilih_gambar">Pilih Gambar</string>
    <string name="unggah">Unggah</string>
    <string name="apakah_hapus">Apakah Anda yakin ingin menghapus unggahan ini?</string>
    <string name="ubah_deskripsi">Ubah Deskripsi</string>
    <string name="rupiahnol">Rp 0</string>
    <string name="tolak">Tolak</string>
    <string name="setujui">Setujui</string>
    <string name="batal">Batal</string>
    <string name="hapus">Hapus</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="jamaahh">Jamaah</string>
    <string name="select_location">Buka Maps</string>
    <string name="daftar_masjid">Daftar Masjid</string>
    <string name="daftar_jamaah">Daftar Jamaah</string>
    <string name="kirim">Kirim</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="pilih_lokasi">Pilih Lokasi</string>
    <string name="pengajuan">Pengajuan</string>
    <string name="bukapeta">Buka Peta</string>
    <string name="titiklokasi">Titik Lokasi Baru</string>
    <string name="batalkan">Batalkan</string>
    <string name="mtrl_picker_header_title">Pilih Tanggal</string>
    <string-array name="filter_options">
        <item>Terbaru</item>
        <item>Terlama</item>
    </string-array>

    <string-array name="sort_options">
        <item>Terbaru</item>
        <item>Terlama</item>
    </string-array>
    <string name="nomor_rekening">Nomor Rekening</string>
    <string name="nama_bank">Nama Bank</string>
    <string name="nama_rekening">Nama Rekening</string>
    <string name="tanggal">Tanggal:</string>
    <string name="password_sekarang">Kata Sandi saat ini</string>
    <string name="password_baru">Kata sandi baru</string>
    <string name="password_baru2">Masukan ulang Kata sandi baru</string>
    <string name="lupa_password">Lupa Kata sandi?</string>
    <string name="ganti">Ubah Kata sandi</string>
    <string name="deskripsi_passsword">Kata sandi Anda minimal harus 6 karakter dan harus mencakup kombinasi angka dan huruf.</string>
    <string name="info_kas">Informasi kas</string>
    <string name="uppload_carousel">Unggah Carousel</string>
    <string name="nama_event">Masukan Nama Event</string>
    <string name="tanggal_event">Pilih Tanggal Event</string>
    <string name="lokasi_event">Masukan Lokasi Event</string>
    <string name="link_event">Masukan Link Pendaftaran</string>
</resources>