<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/white"
       tools:context=".LoginActivity">

      <ImageView
          android:id="@+id/imageView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="4dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:srcCompat="@drawable/masjidhublogo" />

      <ImageButton
          android:id="@+id/backButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="5dp"
          android:background="@null"
          android:layout_marginTop="20dp"
          android:padding="12dp"
          android:src="@drawable/arrow_back_24px"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent" />

      <TextView
          android:id="@+id/masuk"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:fontFamily="@font/poppins_bold"
          android:text="@string/masuk"
          android:textColor="@color/blue"
          android:textSize="32sp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.106"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/imageView2" />

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/namaInputLayout"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="32dp"
          android:layout_marginTop="24dp"
          android:layout_marginEnd="32dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/masuk">

         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/namaEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_light"
             android:background="@drawable/stroke_white"
             android:hint="@string/email"
             android:inputType="text"
             android:padding="12dp" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/passwordInputLayout"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="32dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="32dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/namaInputLayout">

         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/passwordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/stroke_white"
             android:fontFamily="@font/poppins_light"
             android:hint="@string/password"
             android:inputType="textPassword"
             android:padding="12dp" />

      </com.google.android.material.textfield.TextInputLayout>

      <ImageButton
          android:id="@+id/passwordToggle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="32dp"
          android:background="@null"
          android:padding="12dp"
          android:src="@drawable/baseline_visibility_off"
          android:contentDescription="@string/password_toggle_description"
          app:layout_constraintBottom_toBottomOf="@id/passwordInputLayout"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="@id/passwordInputLayout" />

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/loginButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="32dp"
          android:layout_marginTop="84dp"
          android:layout_marginEnd="32dp"
          android:background="@drawable/rounded_button_background"
          android:fontFamily="@font/poppins_bold"
          android:text="@string/login"
          android:textAllCaps="false"
          android:textColor="@color/white"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />

      <TextView
          android:id="@+id/textKebijakan"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/kebijakan"
          android:fontFamily="@font/poppins_light"
          app:layout_constraintEnd_toEndOf="@id/passwordInputLayout"
          app:layout_constraintStart_toStartOf="@id/passwordInputLayout"
          app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />


      <TextView
          android:id="@+id/textDaftar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="24dp"
          android:fontFamily="@font/poppins_light"
          android:text="@string/belum"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/loginButton" />
   </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
