<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="12dp"
            android:src="@drawable/arrow_back_24px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textInfaq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/pengajuan"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.282"
            app:layout_constraintStart_toEndOf="@id/backButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/editTextNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/stroke_white"
            android:hint="@string/nama"
            android:padding="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInfaq"
            app:layout_constraintWidth_percent="1" />

        <EditText
            android:id="@+id/editTextJumlah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/stroke_white"
            android:hint="@string/jumlah_pengajuan"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextNama"
            app:layout_constraintWidth_percent="1" />

        <EditText
            android:id="@+id/editTextAlasan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/stroke_white"
            android:hint="Alasan Pengajuan"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:padding="10dp"
            android:textSize="14sp"
            android:gravity="top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextJumlah"
            app:layout_constraintWidth_percent="1" />

        <EditText
            android:id="@+id/editTextTanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/stroke_white"
            android:hint="@string/tanggal_pengajuan"
            android:padding="10dp"
            android:textSize="14sp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextAlasan"
            app:layout_constraintWidth_percent="1" />

        <EditText
            android:id="@+id/namaBank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/stroke_white"
            android:hint="@string/nama_bank"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextTanggal"
            app:layout_constraintWidth_percent="1" />

        <EditText
            android:id="@+id/nomorRekening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/stroke_white"
            android:hint="@string/nomor_rekening"
            android:inputType="phone"
            android:padding="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/namaBank"
            app:layout_constraintWidth_percent="1" />

        <EditText
            android:id="@+id/namaRekening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/stroke_white"
            android:hint="@string/nama_rekening"
            android:padding="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nomorRekening"
            app:layout_constraintWidth_percent="1" />

        <EditText
            android:id="@+id/editTextKontak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/stroke_white"
            android:hint="@string/nomor_kontak"
            android:inputType="phone"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:padding="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/namaRekening"
            app:layout_constraintWidth_percent="1" />

        <EditText
            android:id="@+id/editTextLokasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/stroke_white"
            android:hint="@string/lokasi"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextKontak"
            app:layout_constraintWidth_percent="1" />



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonUploadFotoPendukung"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/stroke_white"
            android:drawableLeft="@drawable/placeholder_image"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start|center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/pilihfoto_pendukung"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextLokasi" />

        <ImageView
            android:id="@+id/imageViewFotoPendukung"
            android:layout_width="match_parent"
            android:layout_height="198dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_image"
            android:clipToOutline="true"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:visibility="gone"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonUploadFotoPendukung"
            app:layout_constraintVertical_bias="0.5" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonUploadKTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/stroke_white"
            android:drawableLeft="@drawable/placeholder_image"
            android:drawablePadding="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start|center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/pilih_ktp"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewFotoPendukung" />

        <ImageView
            android:id="@+id/imageViewKTP"
            android:layout_width="match_parent"
            android:layout_height="198dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/rounded_image"
            android:clipToOutline="true"
            android:visibility="gone"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonUploadKTP" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/rounded_button_background"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/kirim"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewKTP" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>